--- a/public/style.css
+++ b/public/style.css
@@ -1,32 +1,61 @@
+:root {
+	--background: #000000;
+	--font: #cccccc;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	color: var(--font);
+}
+
 body {
+	position: relative;
+	height: 100vh;
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
-	color: #222;
-	background-color: #FaFaFa;
-	text-align: center;
+	background-color: var(--background);
 	line-height: 1.4em;
 }
 
 .container {
-	padding: 0;
+	padding: 0px 30px;
 	margin-top: 40px;
+}
+
+.container p {
+	padding-left: 50px;
+}
+
+h1 {
+	padding: 25px 0px 0px 0px;
+	text-align: center;
 }
 
 h3 {
-  margin-top: 30px;
+	text-align: start;
+	margin: 30px 0px;
 }
 
-.footer {
-	margin-top: 40px;
+footer {
+	position: absolute;
+	width: 100%;
+	bottom: 0;
+	padding: 20px 0px;
+	text-align: center;
 }
 
 code {
   font-family: monospace;
-  padding: 2px;
-  color: black;
-  background-color: #fff;
+  padding: 2px 0px;
 }
 
-a {
-	color: #2574A9;
+ul {
+	list-style-type: none;
+}
+
+li {
+  margin-bottom: 0.5em;
+  text-align: start;
+  padding-left: 30px;
 }
