--- a/views/index.html
+++ b/views/index.html
@@ -3,15 +3,18 @@
 <html>
 
    <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Request Header Parser</title>
-      <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="style.css" rel="stylesheet" type="text/css">
+      <link rel="shortcut icon" href="icon.png" type="image/x-icon"/>
+      <link href="style.css" rel="stylesheet">
    </head>
 
    <body>
+      <h1>Request Header Parser Microservice</h1>
       <div class="container">
-        <h2>Request Header Parser Microservice</h2>
+        
 
         <h3>Example Usage:</h3>
         <p>
@@ -20,14 +23,12 @@
 
         <h3>Example Output:</h3>
         <p>
-          <code>{"ipaddress":"::ffff:159.20.14.100","language":"en-US,en;q=0.5",<br>"software":"Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:50.0) Gecko/20100101 Firefox/50.0"}</code>
+          <code>{"ipaddress":"::ffff:159.20.14.100","language":"en-US,en;q=0.5", "software":"Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:50.0) Gecko/20100101 Firefox/50.0"}</code>
         </p>
       </div>
-      <div class="footer">
-        <p>
-          by <a href="https://www.freecodecamp.org">freeCodeCamp</a>
-        </p>
-      </div>
+      <footer>
+        <p>Developed by Gabit</p>
+      </footer>
    </body>
 
 
